<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/detail_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_avatar"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/avatar" />

        <Button
            android:id="@+id/bt_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_avatar"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_marginEnd="150dp"
            android:textSize="11sp"
            tools:text="@string/bt_repo"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_repo"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_marginTop="10dp"
            tools:text="Name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_below="@id/tv_name"
            tools:text="username"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_username"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_alignEnd="@id/detail_avatar"
            android:layout_marginTop="16dp"
            tools:text="Bio"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_below="@id/tv_bio"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_people_alt_24" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_bio"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_toRightOf="@id/imageView"
            tools:text="@string/followers_num"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_bio"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_toRightOf="@id/tv_follower"
            tools:text="@string/following_num"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_baseline_book_24"
            android:layout_below="@id/imageView"/>

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_toEndOf="@id/repo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="repository"/>

        <ImageView
            android:id="@+id/office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_business_24"
            android:layout_below="@id/repo"/>

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repo"
            android:layout_toEndOf="@id/office"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="work"/>

        <ImageView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_location_on_24"
            android:layout_below="@id/tv_company"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_company"
            android:layout_toEndOf="@id/location"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="location"/>

        <ImageView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_email_24"
            android:layout_below="@id/tv_location"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_location"
            android:layout_toEndOf="@id/email"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="email"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:background="@color/black_200"
            app:tabSelectedTextColor="@color/light_blue_600"
            app:tabTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabs"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_avatar"
            android:layout_alignTop="@+id/detail_avatar"
            android:layout_alignEnd="@+id/detail_avatar"
            android:layout_marginStart="246dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_favorite_border_24" />

    </RelativeLayout>

</ScrollView>